fix(ui): MetricsTable - increase left spacing

--- a/packages/ui/src/components/metrics-table/metrics-table.module.css
+++ b/packages/ui/src/components/metrics-table/metrics-table.module.css
@@ -16,6 +16,7 @@
 }
 
 .value {
+  padding-left: var(--space-large);
   text-align: right;
 }
 
